# easy_mock

./: .gitignore  README.md  main.py  pyproject.toml
conf/: __init__.py  config.yml  constants.py
core/: __init__.py  config.py  interface.py  login.py  rule.py  user.py  user_defined.py  user_interface.py
model/: Config.py  Interface.py  Rule.py  User.py
src/: main.py
src/conf/: __init__.py  config.yml
src/conf/ssl/: server.crt  server.key
src/core/: config.py  interface.py  login.py  rule.py  user.py  user_interface.py
src/core/apis/: __init__.py  api_interface.py  api_login.py  api_project.py  api_register.py  api_user.py
src/core/constants/: __init__.py
src/core/depends/: __init__.py
src/core/exception/: __init__.py
src/core/models/: model_interface.py  model_project.py  model_user.py  model_user_project.py
src/core/services/: __init__.py  service_interface.py  service_login.py  service_project.py  service_redis.py  service_register.py  service_user.py
src/core/utils/: __init__.py
src/model/: Interface.py  Rule.py  User.py
src/static/: README.md  package.json  vite.config.ts
src/static/src/views/: HomeView.vue  InterfaceDetailVIew.vue  LoginView.vue
static/easy_mock_front/: README.md  package-lock.json  package.json  vite.config.js
static/easy_mock_front/src/: App.vue  main.js
static/src/: App.vue  main.ts
static/src/http/: index.ts
static/src/router/: index.ts
test/: test_config.py  test_interface.py  test_login.py  test_main.py
tests/: test_config.py  test_interface.py  test_login.py
tools/: parse_file.py
(+9 files in other folders)
