[tool.poetry]
name = "easy-mock"
version = "0.1.0"
description = ""
authors = ["zhangshibin <15139569980@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
loguru = "^0.7.2"
fastapi = "^0.109.0"
sqlmodel = "^0.0.14"
starlette-session = "^0.4.3"
uvicorn = "^0.25.0"


[tool.poetry.group.dev.dependencies]
httpx = "^0.26.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
