[project]
name = "easy-mock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "sqlmodel>=0.0.27",
    "starlette-session>=0.4.3",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
]
